# nem-data

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  changelog.md  cli.py  interfaces.py  mypy.ini  notes.md  pyproject.toml  readme.md  requirements.txt  setup.py  tests.py  todo.md  use_cases.py
.github/workflows/: publish-condition.yml  publish.yml  pypi.yml  test.yml
domain/: app.py  cli.py  databases.py  domain.py  seralizers.py  tests.py  use_cases.py
nemdata/: __init__.py  cli.py  config.py  constants.py  database.py  databases.py  downloader.py  interfaces.py  loader.py  mmsdm.py  mmsdm_current.py  models.py  nemde.py  nemde_neu.py  pipeline.py  tables.py  urls.py  use_cases.py  utils.py
notebooks/: demand.ipynb  epl.ipynb  interconnectors.ipynb  nemde.ipynb  visualization.ipynb
poc/: mmsdm_current.py
tests/: conftest.py  test_cli.py  test_data_not_available.py  test_download.py  test_loader.py  test_mmsdm_file.py  test_mmsdm_table.py  test_nemde_file.py  test_readme.py  test_system.py  test_timezones.py  test_trading_price_transition.py  test_unit.py  test_units.py
