[tool.poetry]
name = "nemdata"
version = "0.2.0"
description = "Async downloading of AEMO NEM electricity market data."
authors = ["Adam Green <adam.green@adgefficiency.com>"]

[tool.poetry.scripts]
nem = 'nemdata.cli:run_cli'

[tool.poetry.dependencies]
python = "^3.8"
rich = "^12.5.1"
httpx = "^0.23.0"
pandas = "^1.4.3"
typer = "^0.6.1"
pydantic = "^1.9.1"
aiofiles = "^0.8.0"
pyarrow = "^8.0.0"
fastparquet = "^0.8.1"
lxml = "^4.9.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
