[tool.poetry]
name = "nemdata"
version = "0.3.4"
description = "Simple CLI for downloading data for Australia's NEM from AEMO."
authors = ["Adam Green <adam.green@adgefficiency.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nemdata"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pandas = "^1.5.2"
pyarrow = "^10.0.1"
rich = "^12.6.0"
click = "^8.1.3"
lxml = "^4.9.1"
pydantic = "^1.10.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"



[tool.poetry.group.develop.dependencies]
ipython = "^8.7.0"


[tool.poetry.group.check.dependencies]
black = "^22.10.0"
isort = "^5.10.1"


[tool.poetry.group.static.dependencies]
mypy = "^0.991"

[tool.poetry.scripts]
nemdata = "nemdata.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
